--- a/datingApp2-SPA/package.json
+++ b/datingApp2-SPA/package.json
@@ -22,6 +22,7 @@
     "@auth0/angular-jwt": "^2.1.0",
     "alertifyjs": "^1.11.3",
     "bootstrap": "^4.3.1",
+    "bootswatch": "^4.1.1",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^3.0.1",
     "rxjs": "~6.4.0",
