--- a/datingApp2.API/appsettings.json
+++ b/datingApp2.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",  
+"CloudinarySettings": {
+  "CloudName": "jeyabharathi",
+  "ApiKey": "273846517473977",
+  "ApiSecret": "IqkRSsFrsy5L0CxX85oxIMF1fJ4"
+}
 }
